finish cat clicker premium (5 cats)

--- a/index.html
+++ b/index.html
@@ -1,58 +1,39 @@
-<!DOCtype html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Strict//EN">
+
 <html>
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	 <!-- Compiled and minified CSS -->
-<!--   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">   -->      
+  	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>       
 	<link rel="stylesheet" href="css/style.css">
 	<title>FE Nanodegree Project 1</title>
 	<!-- Load Materilize -->
 	<link></link>
 </head>
 <body>
+	<div class=row>
+		<div class=col-4>
+			<ul class="collection" id="collection">
+		  	</ul>
+	  	</div> <!-- list column -->
+	  	<div class="col-8" id="display_box">
+	  		<div class="display_subbox row">
+	  			<h4>Albert</h4>
+	  		</div>
+	  		<div class="display_subbox row">
+	  			<img id="albert" src="img/albert.jpg" alt="Albert" class="display_pic">
+	  		</div>
+	  		<div class="display_subbox row">
+	  			<h4 id="counter">Counter</h4>
+	  		</div>	  		
+	  	</div> <!-- pic column -->
+  	</div>
 
-	<div class="grid">
-		<div class="row app_name">
-			<div>
-			</div>
-		</div> <!-- row app_name -->
-
-		<div class="row cat_names">
-			<div class="cat_name col-6">
-				<h1>Albert</h1>
-			</div> <!-- albert container -->
-
-		 <div class="cat_name col-6">
-				<h1>Bernard</h1>
-			</div> <!-- bernard container -->
-
-		</div> <!-- cat names container -->
-		
-		<div class="row cat_pics">
-			<div id="cat_albert" class="col-6 img_outer">
-				<img src="img/albert.jpg" alt="Albert">
-			</div> <!-- albert container -->
-			<div id="cat_bernard" class="col-6 img_outer">
-				<img src="img/bernard.jpg" alt="Bernard">
-			</div> <!-- bernard container -->
-		</div> <!-- cat pics container -->
-
-		<!-- Counter block -->
-		<div class="row counter_box">
-			<div class="col-6 CA_outer">
-				<h1 id="counterA">0</h1>
-			</div> <!-- counterA -->
-			<div class="col-6 CB_outer">
-				<h1 id="counterB">0</h1>
-			</div> <!-- counterB -->
-		</div> <!-- counter_box -->
-	</div> <!-- grid --> -->
-
-	<!-- Load MaterilizeJS -->
-	// <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-	<!-- Load jQuery -->
+  	<!-- Load jQuery -->
 	<script type="text/javascript" src="js/lib/jquery.min.js"></script>
+	<!-- Load MaterilizeJS -->
+	<script type="text/javascript" src="js/materialize.min.js"></script>
 	<!-- Load my JS -->
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
