imageClicker doesn't work after a new cat is selected.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	  			<img id="albert" src="img/albert.jpg" alt="Albert" class="display_pic">
 	  		</div>
 	  		<div class="display_subbox row">
-	  			<h4 id="counter">Counter</h4>
+	  			<h4 id="counter">0</h4>
 	  		</div>	  		
 	  	</div> <!-- pic column -->
   	</div>
