complete cat clicker premium pro, woohoo!

--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
 	  		</div>	  		
 	  	</div> <!-- pic column -->
   	</div>
+  	<div class="row">
+	  	<div class='button-div col-6'>
+			<input id="admin-button" type="button" VALUE="Admin">
+		</div>
+		<div class='admin-panel-div col-6'>
+			<form name="adminForm">
+  				Cat Name: <input id="cat_name" type="text" value="" name="name"><br>
+  				Pic URL: <input id="cat_url" type="text" value="" name="url"><br>
+  				#Clicks: <input id="cat_num_click" type="text" value="" name="num_click"><br>
+			  	<input id="submit-button" type="button" value="Save" name="adminSubmit">
+			  	<input id="cancel-button" type="button" value="Cancel" name="adminCancel">
+			</form>
+		</div>
+  	</div><!--  admin row -->
+  	
+
 
   	<!-- Load jQuery -->
 	<script type="text/javascript" src="js/lib/jquery.min.js"></script>
