added facebook app id.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!-- Facebook meta tags -->
-    <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
-    <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="When Great Minds Don’t Think Alike" />
+    <meta property="og:url"                content="http://savourylie.github.io/index.html" />
+    <meta property="og:type"               content="video.other" />
+    <meta property="og:title"              content="Calvin's Astroid Game (beta)" />
     <meta property="og:description"        content="How much does culture influence creative thinking?" />
-    <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+    <meta property="fb:app_id"             content="561106167372794" />
 
     <title>New project</title>
 
