modified image url.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type"               content="video.other" />
     <meta property="og:title"              content="Calvin's Astroid Game (beta)" />
     <meta property="og:description"        content="This is best earth killing game ever! Be the traitor to your home planet and don't do anything. See how astroids dramatically destroy the blue rock!" />
-    <meta property="og:image"              content="images/background-sheet0.png" />
+    <meta property="og:image"              content="http://savourylie.github.io/images/background-sheet0.png" />
     <!-- <meta property="fb:app_id"             content="561106167372794" /> -->
 
 
