--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!-- Facebook meta tags -->
     <meta property="og:url"                content="http://savourylie.github.io/index.html" />
-    <meta property="og:type"               content="video.other" />
+    <meta property="og:type"               content="game" />
     <meta property="og:title"              content="Calvin's Astroid Game (beta)" />
     <meta property="og:description"        content="This is best earth killing game ever! Be the traitor to your home planet and don't do anything. See how astroids dramatically destroy the blue rock!" />
     <meta property="og:image"              content="http://savourylie.github.io/images/background-sheet0.png" />
