--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -92,11 +92,9 @@
   the FB.login() function when clicked.
 -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
 
-<div id="status">
-</div>
+<div id="status"></div>
 
 </body>
 </html>
