added data-auto-logout-link="true" to the fb button.

--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -92,7 +92,7 @@
   the FB.login() function when clicked.
 -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" data-auto-logout-link="true"></fb:login-button>
 
 <div id="status"></div>
 
