changed back to the doc sdk.

--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -7,17 +7,28 @@
 </head>
 
 <body>
-    <script src="http://connect.facebook.net/en_US/all.js"></script>
-    <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();">
-    </fb:login-button>
-    <script language="javascript" type="text/javascript">
-        FB.init({
-            appId: '561568013993276',
-            status: true,
-            cookie: true,
-            xfbml: true
-        });
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId: '561568013993276',
+                xfbml: true,
+                version: 'v2.5'
+            });
+        };
+
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
     </script>
+    <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();"></fb:login-button>
+
 </body>
 
 </html>
