trying manual login

--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -27,7 +27,19 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
-    <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();"></fb:login-button>
+    <a href="#" id="login-btn">Log in with Facebook</a>
+    <script type="text/javascript">
+        document.getElementById('login-btn').onclick = function() {
+            FB.login(function(response) {
+                Log.info('FB.login response', response);
+            });
+            return false;
+        }
+    </script>
+
+
+
+    <!-- <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();"></fb:login-button> -->
 
 </body>
 
