--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -31,13 +31,22 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
 
-        
         function facebookInit() {
+            // Get login status OR Login to Facebook
             FB.getLoginStatus(function(response) {
                 if (response.status === 'connected') {
                     console.log('Logged in.');
                 }
                 else { FB.login(); }
+            });
+        }
+
+        function testAPI() {
+            console.log('Welcome!  Fetching your information.... ');
+            FB.api('/me', function(response) {
+              console.log('Successful login for: ' + response.name);
+              document.getElementById('status').innerHTML =
+                'Thanks for logging in, ' + response.name + '!';
             });
         }
     </script>
