added 'status' div.

--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -64,7 +64,7 @@
 
 
     <!-- <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();"></fb:login-button> -->
-
+    <div id="status"></div>
 </body>
 
 </html>
