externalized fb api (second attempt)

--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Facebook Login JavaScript Example</title>
     <meta charset="UTF-8">
-    <script src="js/facebook.js"></script>
+    <script type="text/javascript" src="js/facebook.js"></script>
 </head>
 
 <body>
