--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -4,11 +4,12 @@
 <head>
     <title>Facebook Login JavaScript Example</title>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="js/facebook.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
-
+    <div class="fb-icon" data-bind="click: fbIcon"></div>
+    <button data-bind="click: fbIcon">Test</button>
     <!-- <a href="#" id="login-btn">Log in with Facebook</a>
     <script type="text/javascript">
         document.getElementById('login-btn').onclick = function() {
@@ -23,6 +24,9 @@
 
     <!-- <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();"></fb:login-button> -->
     <div id="status"></div>
+    <script type="text/javascript" src="js/knockout-3.4.0.js"></script>
+    <script type="text/javascript" src="js/facebook.js"></script>
+
 </body>
 
 </html>
