remove the click binding of the blue box.

--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="fb-icon" data-bind="click: fbIcon"></div>
+    <!-- <div class="fb-icon" data-bind="click: fbIcon"></div> -->
     <button data-bind="click: fbIcon">Test</button>
     <!-- <a href="#" id="login-btn">Log in with Facebook</a>
     <script type="text/javascript">
