--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <!-- <div class="fb-icon" data-bind="click: fbIcon"></div> -->
-    <button data-bind="click: fbIcon">Test</button>
+    <button data-bind="click: fbLogin">FB Login</button>
+    <button data-bind="click: fbOut">FB Logout</button>
     <!-- <a href="#" id="login-btn">Log in with Facebook</a>
     <script type="text/javascript">
         document.getElementById('login-btn').onclick = function() {
