--- a/facebookTest/index.html
+++ b/facebookTest/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <div id="test-field" class="row">
-        <h2 data-bind="text: response.status">
+        <h2 data-bind="text: response().status">
         <h2>You NO RUN! I know who you are! Dickface! And I know all of this information about you!</h2>
         <!-- Use the foreach data-bind -->
 
